<resources>
    <string name="app_name">HBC</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="gohome">내파티룸으로</string>
    <string name="menu">메뉴</string>
    <string name="bitrh_title">저희에게 생일을 알려주세요</string>
    <string name="birth_subtitle">파티룸 생성을 위해 사용됨</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="birth_lunar">음력이에요</string>
    <string name="start">시작하기</string>

    <dimen name="popup_width">310dp</dimen>
    <dimen name="popup_height">405dp</dimen>
</resources>