<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true">

    <TextView
        android:id="@+id/tv_setbirth_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="건너뛰기"
        android:textSize="12sp">
    </TextView>


    <TextView
        android:id="@+id/tv_setbirth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_setbirth_subtitle"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="6dp"
        android:text="@string/bitrh_title"
        android:textStyle="bold"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tv_setbirth_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_setbirth_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_setbirth_year"
        android:layout_marginBottom="75dp"
        android:text="@string/birth_subtitle"
        android:textSize="14sp">
    </TextView>


    <TextView
        android:id="@+id/tv_setbirth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_setbirth_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_setbirth_month"
        app:layout_constraintBottom_toTopOf="@id/et_setbirth_year"
        android:layout_marginBottom="15dp"
        android:text="@string/year"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/tv_setbirth_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_setbirth_year"
        app:layout_constraintBottom_toBottomOf="@id/tv_setbirth_year"
        app:layout_constraintLeft_toRightOf="@id/tv_setbirth_year"
        app:layout_constraintRight_toLeftOf="@id/tv_setbirth_day"
        android:text="@string/month"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/tv_setbirth_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_setbirth_year"
        app:layout_constraintBottom_toBottomOf="@id/tv_setbirth_year"
        app:layout_constraintLeft_toRightOf="@id/tv_setbirth_month"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/day"
        android:textSize="16sp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:id="@+id/et_setbirth_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_setbirth_year"
        app:layout_constraintBottom_toTopOf="@id/tv_setbirth_lunar"
        app:layout_constraintLeft_toLeftOf="@id/tv_setbirth_year"
        app:layout_constraintRight_toRightOf="@id/tv_setbirth_year"
        android:hint="@string/year"
        android:textColorHint="@color/et_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@null"
        android:inputType="numberSigned"
        android:maxLength="4"
        android:nextFocusDown="@id/et_setbirth_month">
    </EditText>
    <EditText
        android:id="@+id/et_setbirth_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_setbirth_year"
        app:layout_constraintBottom_toBottomOf="@id/et_setbirth_year"
        app:layout_constraintLeft_toLeftOf="@id/tv_setbirth_month"
        app:layout_constraintRight_toRightOf="@id/tv_setbirth_month"
        android:hint="@string/month"
        android:textColorHint="@color/et_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@null"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:nextFocusDown="@id/et_setbirth_day">
    </EditText>
    <EditText
        android:id="@+id/et_setbirth_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/et_setbirth_year"
        app:layout_constraintBottom_toBottomOf="@id/et_setbirth_year"
        app:layout_constraintLeft_toLeftOf="@id/tv_setbirth_day"
        app:layout_constraintRight_toRightOf="@id/tv_setbirth_day"
        android:hint="@string/day"
        android:textColorHint="@color/et_gray"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@null"
        android:inputType="numberSigned"
        android:maxLength="2">
    </EditText>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_setbirth_lunar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_setbirth_lunar"
        app:layout_constraintRight_toLeftOf="@id/tv_setbirth_lunar"
        app:layout_constraintBottom_toBottomOf="@id/tv_setbirth_lunar"
        android:layout_marginRight="5dp"
        >
    </com.google.android.material.checkbox.MaterialCheckBox>
    <TextView
        android:id="@+id/tv_setbirth_lunar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_setbirth_year"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="29dp"
        android:layout_marginRight="20dp"
        android:text="@string/birth_lunar"
        android:textSize="14sp">
    </TextView>

    <TextView
        android:id="@+id/tv_setbirth_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"
        android:paddingVertical="18dp"
        android:text="@string/start"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/item_start_btn">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>